# ParasitePic

./: Aplication_Statements.txt  CMakeCache.txt  CMakeLists.txt  ImageManager.cpp  ImageManager.h  MainWindow.cpp  MainWindow.h  Makefile  ParasiteDetector.cpp  ParasiteDetector.h  ParasitePic.sublime-workspace  ResultManager.cpp  ResultManager.h  YOLOModel.cpp  YOLOModel.h  cmake_install.cmake
ParasitePicQTProj/: ParasitePicQTProj.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
build-ParasitePic-DTDebug/: Makefile  ui_mainwindow.h
